2013-03-28  Leo Liu  <sdl.web@gmail.com>

	* vc/vc-bzr.el (vc-bzr-revert): Don't backup.  (Bug#14066)

2013-03-27  Eli Zaretskii  <eliz@gnu.org>

	* facemenu.el (list-colors-callback): New defvar.
	(list-colors-redisplay): New function.
	(list-colors-display): Install list-colors-redisplay as the
	revert-buffer-function.  (Bug#14063)

2013-03-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-pcm--merge-completions): Make sure prefixes
	and suffixes don't overlap (bug#14061).

	* case-table.el: Use lexical-binding.
	(case-table-get-table): New function.
	(get-upcase-table): Use it.  Mark as obsolete.  Adjust callers.

2013-03-27  Teodor Zlatanov  <tzz@lifelogs.com>

	* progmodes/subword.el: Add `superword-mode' to do word motion
	over symbol_words (parallels and leverages `subword-mode' which
	does word motion inside MixedCaseWords).

2013-03-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* desktop.el (desktop--v2s): Rename from desktop-internal-v2s.
	Change return value to be a sexp.  Delay `get-buffer' to after
	restoring the desktop (bug#13951).

2013-03-26  Leo Liu  <sdl.web@gmail.com>

	* register.el: Move semantic tag handling back to
	cedet/semantic/senator.el.  (Bug#14052)

2013-03-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* eshell/em-prompt.el (eshell-emit-prompt): Make sure we can't insert
	into the prompt either (bug#13963).

2013-03-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* font-lock.el (lisp-font-lock-keywords-2): Don't highlight the "error"
	part of "(error-foo)".

2013-03-24  Juri Linkov  <juri@jurta.org>

	* replace.el (list-matching-lines-prefix-face): New defcustom.
	(occur-1): Pass `list-matching-lines-prefix-face' to the function
	`occur-engine' if `face-differs-from-default-p' returns t.
	(occur-engine): Add `,' inside backquote construct to evaluate
	`prefix-face'.  Propertize the prefix with the `prefix-face' face.
	Pass `prefix-face' to the functions `occur-context-lines' and